feat: implement clean architecture project with MongoDB and Minimal APIs .NET 9
- Integrated MongoDB as the database with `MongoDbContext` for managing collections
- Added `MongoSettings` for configuration and registered in DI
- Created generic `BaseRepository` for CRUD operations and specific `UserRepository`
- Implemented `IUserRepository` to abstract user data access logic
- Set up MediatR for CQRS pattern and added pipeline behaviors
- Added `/users` endpoints:
  - `POST /users`: Create a new user using `CreateUserCommand` and validation
  - Integrated `ValidationBehavior` to enforce command validation
- Registered services via `ServiceExtensions` for persistence, application logic, and middleware
- Organized project into Clean Architecture layers:
  - **Domain**: Core entities and business models
  - **Application**: Command, query, and validation logic
  - **Infrastructure**: Persistence and database access
  - **Presentation**: Minimal API routes and endpoint definitions
- Added Swagger for API documentation
- Updated `launchSettings.json` for consistent local development

--- a/CleanArchitectureDotNet9.WebAPI/CleanArchitectureDotNet9.WebAPI.csproj
+++ b/CleanArchitectureDotNet9.WebAPI/CleanArchitectureDotNet9.WebAPI.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\CleanArchitectureDotNet9.Application\CleanArchitectureDotNet9.Application.csproj" />
+    <ProjectReference Include="..\CleanArchitectureDotNet9.Persistence\CleanArchitectureDotNet9.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
