--- a/CleanArchitectureDotNet9.WebAPI/appsettings.json
+++ b/CleanArchitectureDotNet9.WebAPI/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "DotNet9"
+  },
+  "SwaggerConfigTest": {
+    "EndPoint": "/swagger/v1/swagger.json",
+    "Title": "Mongo API Test",
+    "Version": "v1"
+  },
   "AllowedHosts": "*"
 }
